--- a/wiki/cs/Tree_View.html
+++ b/wiki/cs/Tree_View.html
@@ -17,7 +17,7 @@
 </p>
 <h2><span id=".C3.9Avod"></span><span class="mw-headline" id="&Uacute;vod">&Uacute;vod</span></h2>
 <p><a href="../Tree_View.html" title="Tree View">Stromov&eacute; zobrazen&iacute;</a> se zobrazuje v horn&iacute; &#269;&aacute;sti panelu <b>Model</b> (pokud je aktivn&iacute; <a href="../Combo_View.html" title="Combo View">Kombinovan&eacute; zobrazen&iacute;</a>) nebo jako samostatn&yacute; panel. Zobrazuje v&scaron;echny u&#382;ivatelsky definovan&eacute; objekty, kter&eacute; jsou sou&#269;&aacute;st&iacute; dokumentu FreeCADu. Stromov&eacute; zobrazen&iacute; je zn&aacute;zorn&#283;n&iacute;m <a href="../index.php?title=Struktura_dokumentu&amp;action=edit&amp;redlink=1.html" class="new" title="Struktura dokumentu (page does not exist)">struktury dokumentu</a> a ukazuje, jak&eacute; informace jsou ulo&#382;eny na disku.
-</p><p>These objects don't necessarily have to be geometrical shapes visible in the <a href="../3D_View.html" title="3D View">3D View</a>, but can also be supporting data objects created with any of the <a href="../Workbenches.html" title="Workbenches">workbenches</a>.
+</p><p>Tyto objekty nemus&iacute; b&yacute;t nutn&#283; geometrick&eacute; tvary viditeln&eacute; ve <a href="../3D_View.html" title="3D View">3D pohledu</a>, ale mohou to b&yacute;t tak&eacute; podp&#367;rn&eacute; datov&eacute; objekty vytvo&#345;en&eacute; pomoc&iacute; n&#283;kter&eacute; z <a href="../Workbenches.html" title="Workbenches">pracovn&iacute;ch ploch</a>.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view.png&amp;filetimestamp=20240720173431&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view.png" decoding="async" width="298" height="280" class="mw-file-element" data-file-width="298" data-file-height="280"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">The Tree View showing various elements in the document.</p>
@@ -154,12 +154,12 @@ Fully expanding the tree reveals the original elements that were used to create 
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122181138
+Cached time: 20260122181437
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.109 seconds
-Real time usage: 0.139 seconds
+CPU time usage: 0.136 seconds
+Real time usage: 0.222 seconds
 Preprocessor visited node count: 749/1000000
 Post&#8208;expand include size: 37917/2097152 bytes
 Template argument size: 12152/2097152 bytes
@@ -170,19 +170,19 @@ Unstrip post&#8208;expand size: 2392/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   28.772      1 -total
- 25.98%    7.475      1 Template:Std_Base_navi/cs
- 20.77%    5.977      3 Template:Navigation_menu_2
- 16.63%    4.784      1 Template:Userdocnavi/cs
- 13.25%    3.811      1 Template:Interface_navi/cs
-  8.66%    2.492      2 Template:PropertyData
-  7.40%    2.128      1 Template:PropertyView
-  5.74%    1.650      3 Template:Variable
-  4.50%    1.296     19 Template:KEY
-  4.22%    1.213      1 Template:FALSE
+100.00%   47.295      1 -total
+ 22.45%   10.618      1 Template:Std_Base_navi/cs
+ 16.36%    7.735      3 Template:Navigation_menu_2
+ 15.90%    7.519      1 Template:Interface_navi/cs
+ 13.48%    6.374      1 Template:Userdocnavi/cs
+  7.85%    3.711      2 Template:PropertyData
+  6.50%    3.073      1 Template:PropertyView
+  6.10%    2.886      2 Template:Caption
+  5.74%    2.715      1 Template:TOCright
+  5.41%    2.561      3 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122181138 and revision id 1742567. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122181437 and revision id 1742572. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
