--- a/wiki/cs/Tree_View.html
+++ b/wiki/cs/Tree_View.html
@@ -20,7 +20,7 @@
 </p><p>Tyto objekty nemus&iacute; b&yacute;t nutn&#283; geometrick&eacute; tvary viditeln&eacute; ve <a href="../3D_View.html" title="3D View">3D pohledu</a>, ale mohou to b&yacute;t tak&eacute; podp&#367;rn&eacute; datov&eacute; objekty vytvo&#345;en&eacute; pomoc&iacute; n&#283;kter&eacute; z <a href="../Workbenches.html" title="Workbenches">pracovn&iacute;ch ploch</a>.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view.png&amp;filetimestamp=20240720173431&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view.png" decoding="async" width="298" height="280" class="mw-file-element" data-file-width="298" data-file-height="280"></a></span>
 </p>
-<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">The Tree View showing various elements in the document.</p>
+<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Stromov&aacute; struktura zobrazuj&iacute;c&iacute; r&#367;zn&eacute; prvky v dokumentu.</p>
 <h2><span class="mw-headline" id="Working_with_the_Tree_View">Working with the Tree View</span></h2>
 <p>By default, whenever a new object is created, it is added to the end of the list in the Tree View. The Tree View allows managing the objects to keep them organized; it permits creating <a href="../Std_Group.html" title="Std Group">groups</a>, moving objects inside groups, moving groups inside other groups, relabeling objects, copying objects, deleting objects, and using options from its <a href="#Context_menu">context menu</a>.
 </p><p>Many operations create objects that are dependent on a previously existing object. In this case, the Tree View shows this relationship by absorbing the older object inside the new object. Expanding and collapsing the objects in the Tree View shows the parametric history of that object. Objects that are deeper inside others are older, while objects that are outside are newer, and are derived from the older objects. By modifying the interior objects, the parametric operations propagate all the way to the top, generating a new result.
@@ -154,15 +154,15 @@ Fully expanding the tree reveals the original elements that were used to create 
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122181437
+Cached time: 20260122181507
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.136 seconds
-Real time usage: 0.222 seconds
+CPU time usage: 0.114 seconds
+Real time usage: 0.164 seconds
 Preprocessor visited node count: 749/1000000
-Post&#8208;expand include size: 37917/2097152 bytes
-Template argument size: 12152/2097152 bytes
+Post&#8208;expand include size: 37927/2097152 bytes
+Template argument size: 12157/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -170,19 +170,19 @@ Unstrip post&#8208;expand size: 2392/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   47.295      1 -total
- 22.45%   10.618      1 Template:Std_Base_navi/cs
- 16.36%    7.735      3 Template:Navigation_menu_2
- 15.90%    7.519      1 Template:Interface_navi/cs
- 13.48%    6.374      1 Template:Userdocnavi/cs
-  7.85%    3.711      2 Template:PropertyData
-  6.50%    3.073      1 Template:PropertyView
-  6.10%    2.886      2 Template:Caption
-  5.74%    2.715      1 Template:TOCright
-  5.41%    2.561      3 Template:Variable
+100.00%   31.396      1 -total
+ 23.31%    7.320      1 Template:Std_Base_navi/cs
+ 21.19%    6.654      3 Template:Navigation_menu_2
+ 16.76%    5.263      1 Template:Interface_navi/cs
+ 13.42%    4.214      1 Template:Userdocnavi/cs
+  9.12%    2.862      2 Template:PropertyData
+  5.99%    1.881      2 Template:Caption
+  5.81%    1.823      3 Template:Variable
+  5.10%    1.601      1 Template:PropertyView
+  4.72%    1.483     19 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122181437 and revision id 1742572. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122181506 and revision id 1742574. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
