--- a/wiki/cs/Tree_View.html
+++ b/wiki/cs/Tree_View.html
@@ -21,7 +21,9 @@
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view.png&amp;filetimestamp=20240720173431&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view.png" decoding="async" width="298" height="280" class="mw-file-element" data-file-width="298" data-file-height="280"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Stromov&aacute; struktura zobrazuj&iacute;c&iacute; r&#367;zn&eacute; prvky v dokumentu.</p>
-<h2><span class="mw-headline" id="Working_with_the_Tree_View">Working with the Tree View</span></h2>
+<p><span id="Working_with_the_Tree_View"></span>
+</p>
+<h2><span id="Pr.C3.A1ce_se_stromov.C3.BDm_zobrazen.C3.ADm"></span><span class="mw-headline" id="Pr&aacute;ce_se_stromov&yacute;m_zobrazen&iacute;m">Pr&aacute;ce se stromov&yacute;m zobrazen&iacute;m</span></h2>
 <p>By default, whenever a new object is created, it is added to the end of the list in the Tree View. The Tree View allows managing the objects to keep them organized; it permits creating <a href="../Std_Group.html" title="Std Group">groups</a>, moving objects inside groups, moving groups inside other groups, relabeling objects, copying objects, deleting objects, and using options from its <a href="#Context_menu">context menu</a>.
 </p><p>Many operations create objects that are dependent on a previously existing object. In this case, the Tree View shows this relationship by absorbing the older object inside the new object. Expanding and collapsing the objects in the Tree View shows the parametric history of that object. Objects that are deeper inside others are older, while objects that are outside are newer, and are derived from the older objects. By modifying the interior objects, the parametric operations propagate all the way to the top, generating a new result.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_parametric_history.png&amp;filetimestamp=20240720173407&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_parametric_history.png" decoding="async" width="298" height="230" class="mw-file-element" data-file-width="298" data-file-height="230"></a></span>
@@ -154,13 +156,13 @@ Fully expanding the tree reveals the original elements that were used to create 
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122181507
+Cached time: 20260122181534
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.114 seconds
-Real time usage: 0.164 seconds
-Preprocessor visited node count: 749/1000000
+CPU time usage: 0.126 seconds
+Real time usage: 0.177 seconds
+Preprocessor visited node count: 750/1000000
 Post&#8208;expand include size: 37927/2097152 bytes
 Template argument size: 12157/2097152 bytes
 Highest expansion depth: 7/100
@@ -170,19 +172,19 @@ Unstrip post&#8208;expand size: 2392/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   31.396      1 -total
- 23.31%    7.320      1 Template:Std_Base_navi/cs
- 21.19%    6.654      3 Template:Navigation_menu_2
- 16.76%    5.263      1 Template:Interface_navi/cs
- 13.42%    4.214      1 Template:Userdocnavi/cs
-  9.12%    2.862      2 Template:PropertyData
-  5.99%    1.881      2 Template:Caption
-  5.81%    1.823      3 Template:Variable
-  5.10%    1.601      1 Template:PropertyView
-  4.72%    1.483     19 Template:KEY
+100.00%   39.902      1 -total
+ 24.50%    9.775      1 Template:Std_Base_navi/cs
+ 19.28%    7.694      3 Template:Navigation_menu_2
+ 15.22%    6.073      1 Template:Interface_navi/cs
+ 12.38%    4.941      1 Template:Userdocnavi/cs
+ 11.45%    4.568      2 Template:PropertyData
+  6.31%    2.519      3 Template:Variable
+  5.41%    2.160      2 Template:Caption
+  4.88%    1.948      1 Template:FALSE
+  4.55%    1.817      5 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122181506 and revision id 1742574. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122181534 and revision id 1742576. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
