--- a/wiki/cs/Tree_View.html
+++ b/wiki/cs/Tree_View.html
@@ -16,7 +16,7 @@
 <p><span id="Introduction"></span>
 </p>
 <h2><span id=".C3.9Avod"></span><span class="mw-headline" id="&Uacute;vod">&Uacute;vod</span></h2>
-<p><a href="../Tree_View.html" title="Tree View">Stromov&eacute; zobrazen&iacute;</a> se zobrazuje v horn&iacute; &#269;&aacute;sti panelu <b>Model</b> (pokud je aktivn&iacute; <a href="../Combo_View.html" title="Combo View">Kombinovan&eacute; zobrazen&iacute;</a>) nebo jako samostatn&yacute; panel. Zobrazuje v&scaron;echny u&#382;ivatelsky definovan&eacute; objekty, kter&eacute; jsou sou&#269;&aacute;st&iacute; dokumentu FreeCADu. Stromov&eacute; zobrazen&iacute; je zn&aacute;zorn&#283;n&iacute;m <a href="../index.php?title=Struktura_dokumentu&amp;action=edit&amp;redlink=1.html" class="new" title="Struktura dokumentu (page does not exist)">struktury dokumentu</a> a ukazuje, jak&eacute; informace jsou ulo&#382;eny na disku.
+<p><a href="../Tree_View.html" title="Tree View">Stromov&eacute; zobrazen&iacute;</a> se zobrazuje v horn&iacute; &#269;&aacute;sti panelu <b>Model</b> (pokud je aktivn&iacute; <a href="../Combo_View.html" title="Combo View">Kombinovan&eacute; zobrazen&iacute;</a>) nebo jako samostatn&yacute; panel. Zobrazuje v&scaron;echny u&#382;ivatelsky definovan&eacute; objekty, kter&eacute; jsou sou&#269;&aacute;st&iacute; dokumentu FreeCADu. Stromov&eacute; zobrazen&iacute; je zn&aacute;zorn&#283;n&iacute;m <a href="../Document_structure.html" title="Document structure">struktury dokumentu</a> a ukazuje, jak&eacute; informace jsou ulo&#382;eny na disku.
 </p><p>Tyto objekty nemus&iacute; b&yacute;t nutn&#283; geometrick&eacute; tvary viditeln&eacute; ve <a href="../3D_View.html" title="3D View">3D pohledu</a>, ale mohou to b&yacute;t tak&eacute; podp&#367;rn&eacute; datov&eacute; objekty vytvo&#345;en&eacute; pomoc&iacute; n&#283;kter&eacute; z <a href="../Workbenches.html" title="Workbenches">pracovn&iacute;ch ploch</a>.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view.png&amp;filetimestamp=20240720173431&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view.png" decoding="async" width="298" height="280" class="mw-file-element" data-file-width="298" data-file-height="280"></a></span>
 </p>
@@ -156,12 +156,12 @@ Fully expanding the tree reveals the original elements that were used to create 
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122181534
+Cached time: 20260122181640
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.126 seconds
-Real time usage: 0.177 seconds
+CPU time usage: 0.107 seconds
+Real time usage: 0.147 seconds
 Preprocessor visited node count: 750/1000000
 Post&#8208;expand include size: 37927/2097152 bytes
 Template argument size: 12157/2097152 bytes
@@ -172,19 +172,19 @@ Unstrip post&#8208;expand size: 2392/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   39.902      1 -total
- 24.50%    9.775      1 Template:Std_Base_navi/cs
- 19.28%    7.694      3 Template:Navigation_menu_2
- 15.22%    6.073      1 Template:Interface_navi/cs
- 12.38%    4.941      1 Template:Userdocnavi/cs
- 11.45%    4.568      2 Template:PropertyData
-  6.31%    2.519      3 Template:Variable
-  5.41%    2.160      2 Template:Caption
-  4.88%    1.948      1 Template:FALSE
-  4.55%    1.817      5 Template:Version
+100.00%   31.203      1 -total
+ 22.22%    6.932      1 Template:Std_Base_navi/cs
+ 20.82%    6.496      3 Template:Navigation_menu_2
+ 15.25%    4.757      1 Template:Interface_navi/cs
+  9.73%    3.037      1 Template:Userdocnavi/cs
+  9.58%    2.988      2 Template:PropertyData
+  8.19%    2.556      1 Template:PropertyView
+  6.46%    2.014      3 Template:Variable
+  5.93%    1.851     19 Template:KEY
+  4.98%    1.555      5 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122181534 and revision id 1742576. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122181640 and revision id 1742578. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
