--- a/wiki/cs/Document_structure.html
+++ b/wiki/cs/Document_structure.html
@@ -41,7 +41,7 @@
 </p><p><span id="Scripting"></span>
 </p>
 <h2><span id="Skriptov.C3.A1n.C3.AD"></span><span class="mw-headline" id="Skriptov&aacute;n&iacute;">Skriptov&aacute;n&iacute;</span></h2>
-<p>Dokumenty lze snadno vytv&aacute;&#345;et, otev&iacute;rat a upravovat z interpretu <a href="../index.php?title=Python/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Python/cs (page does not exist)">Pythonu</a>. Nap&#345;&iacute;klad:
+<p>Dokumenty lze snadno vytv&aacute;&#345;et, otev&iacute;rat a upravovat z interpretu <a href="../Python.html" title="Python">Pythonu</a>. Nap&#345;&iacute;klad:
 </p>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">FreeCAD</span><span class="o">.</span><span class="n">ActiveDocument</span>
 </pre></div>
@@ -86,12 +86,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122182117
+Cached time: 20260122182135
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.078 seconds
-Real time usage: 0.125 seconds
+CPU time usage: 0.092 seconds
+Real time usage: 0.164 seconds
 Preprocessor visited node count: 205/1000000
 Post&#8208;expand include size: 7590/2097152 bytes
 Template argument size: 2392/2097152 bytes
@@ -102,16 +102,16 @@ Unstrip post&#8208;expand size: 5360/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   15.612      1 -total
- 42.40%    6.619      1 Template:Userdocnavi/cs
- 19.25%    3.005      5 Template:Code
- 18.01%    2.811      1 Template:Navigation_menu_2
- 14.81%    2.313      2 Template:Docnav
-  9.35%    1.460      1 Template:TOCright
-  8.86%    1.383      1 Template:Emphasis
+100.00%   22.481      1 -total
+ 37.61%    8.455      1 Template:Userdocnavi/cs
+ 25.67%    5.770      5 Template:Code
+ 16.70%    3.754      2 Template:Docnav
+ 13.59%    3.055      1 Template:Navigation_menu_2
+  8.72%    1.960      1 Template:TOCright
+  7.61%    1.710      1 Template:Emphasis
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:20566-0!canonical and timestamp 20260122182116 and revision id 1742580. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:20566-0!canonical and timestamp 20260122182135 and revision id 1742582. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
