--- a/wiki/cs/Tree_View.html
+++ b/wiki/cs/Tree_View.html
@@ -7,7 +7,7 @@
 <li><a href="../pl/Tree_View.html" class="mw-pt-progress mw-pt-progress--complete" title="Widok drzewa (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/Tree_View.html" class="mw-pt-progress mw-pt-progress--low" title="Vista em &aacute;rvore (2% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../sv/Tree_View.html" class="mw-pt-progress mw-pt-progress--low" title="Tree View/sv (2% translated)" lang="sv" dir="ltr">svenska</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--low" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
 <li><a href="../bg/Tree_View.html" class="mw-pt-progress mw-pt-progress--high" title="&#1044;&#1098;&#1088;&#1074;&#1086;&#1074;&#1080;&#1076;&#1077;&#1085; &#1080;&#1079;&#1075;&#1083;&#1077;&#1076; (79% translated)" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</a></li>
 <li><a href="../ru/Tree_View.html" class="mw-pt-progress mw-pt-progress--high" title="&#1044;&#1088;&#1077;&#1074;&#1086; &#1087;&#1088;&#1086;&#1077;&#1082;&#1090;&#1072; (94% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ja/Tree_View.html" class="mw-pt-progress mw-pt-progress--high" title="&#12484;&#12522;&#12540;&#12499;&#12517;&#12540; (94% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
@@ -24,7 +24,7 @@
 <p><span id="Working_with_the_Tree_View"></span>
 </p>
 <h2><span id="Pr.C3.A1ce_se_stromov.C3.BDm_zobrazen.C3.ADm"></span><span class="mw-headline" id="Pr&aacute;ce_se_stromov&yacute;m_zobrazen&iacute;m">Pr&aacute;ce se stromov&yacute;m zobrazen&iacute;m</span></h2>
-<p>By default, whenever a new object is created, it is added to the end of the list in the Tree View. The Tree View allows managing the objects to keep them organized; it permits creating <a href="../Std_Group.html" title="Std Group">groups</a>, moving objects inside groups, moving groups inside other groups, relabeling objects, copying objects, deleting objects, and using options from its <a href="#Context_menu">context menu</a>.
+<p>Ve v&yacute;choz&iacute;m nastaven&iacute; se ka&#382;d&yacute; nov&yacute; objekt po vytvo&#345;en&iacute; p&#345;id&aacute; na konec seznamu v zobrazen&iacute; stromov&eacute; struktury. Zobrazen&iacute; stromu umo&#382;&#328;uje spravovat objekty tak, aby byly p&#345;ehledn&#283; uspo&#345;&aacute;d&aacute;ny; umo&#382;&#328;uje vytv&aacute;&#345;et <a href="../Std_Group.html" title="Std Group">skupiny</a>, p&#345;esouvat objekty uvnit&#345; skupin, p&#345;esouvat skupiny uvnit&#345; jin&yacute;ch skupin, p&#345;ejmenov&aacute;vat objekty, kop&iacute;rovat objekty, mazat objekty a pou&#382;&iacute;vat polo&#382;ky z jeho <a href="#Context_menu">kontextov&eacute;ho menu</a>.
 </p><p>Many operations create objects that are dependent on a previously existing object. In this case, the Tree View shows this relationship by absorbing the older object inside the new object. Expanding and collapsing the objects in the Tree View shows the parametric history of that object. Objects that are deeper inside others are older, while objects that are outside are newer, and are derived from the older objects. By modifying the interior objects, the parametric operations propagate all the way to the top, generating a new result.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_parametric_history.png&amp;filetimestamp=20240720173407&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_parametric_history.png" decoding="async" width="298" height="230" class="mw-file-element" data-file-width="298" data-file-height="230"></a></span>
 </p>
@@ -156,12 +156,12 @@ Fully expanding the tree reveals the original elements that were used to create 
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122181640
+Cached time: 20260122183459
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.107 seconds
-Real time usage: 0.147 seconds
+CPU time usage: 0.135 seconds
+Real time usage: 0.193 seconds
 Preprocessor visited node count: 750/1000000
 Post&#8208;expand include size: 37927/2097152 bytes
 Template argument size: 12157/2097152 bytes
@@ -172,19 +172,19 @@ Unstrip post&#8208;expand size: 2392/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   31.203      1 -total
- 22.22%    6.932      1 Template:Std_Base_navi/cs
- 20.82%    6.496      3 Template:Navigation_menu_2
- 15.25%    4.757      1 Template:Interface_navi/cs
-  9.73%    3.037      1 Template:Userdocnavi/cs
-  9.58%    2.988      2 Template:PropertyData
-  8.19%    2.556      1 Template:PropertyView
-  6.46%    2.014      3 Template:Variable
-  5.93%    1.851     19 Template:KEY
-  4.98%    1.555      5 Template:Version
+100.00%   44.709      1 -total
+ 22.07%    9.868      1 Template:Interface_navi/cs
+ 21.54%    9.631      1 Template:Std_Base_navi/cs
+ 17.17%    7.676      3 Template:Navigation_menu_2
+ 12.44%    5.562      1 Template:Userdocnavi/cs
+  8.66%    3.870      2 Template:PropertyData
+  6.16%    2.754      1 Template:FALSE
+  5.00%    2.237      1 Template:PropertyView
+  4.81%    2.151      3 Template:Variable
+  4.46%    1.995     19 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122181640 and revision id 1742578. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122183459 and revision id 1742584. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
