--- a/wiki/cs/Tree_View.html
+++ b/wiki/cs/Tree_View.html
@@ -33,7 +33,7 @@
 <p><span id="Tree_View_columns"></span>
 </p>
 <h3><span id="Sloupce_stromov.C3.A9ho_zobrazen.C3.AD"></span><span class="mw-headline" id="Sloupce_stromov&eacute;ho_zobrazen&iacute;">Sloupce stromov&eacute;ho zobrazen&iacute;</span></h3>
-<p>The Tree View always displays a column with the icons and labels of objects. Two additional columns can optionally be displayed as well. To enable these columns right-click the Tree View and in the context menu select <b>Tree Settings</b> and then <b>Show Description</b> (<span style="font-size:small;"><a href="../Release_notes_0.21.html" title="Release notes 0.21">introduced in 0.21</a></span>) and/or <b>Show Internal Name</b> (<span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>). Column headings are added if more than one column is displayed. Note that the internal names of objects cannot be changed.
+<p>Zobrazen&iacute; stromu v&#382;dy zobrazuje sloupec s ikonami a popisky objekt&#367;. Voliteln&#283; lze zobrazit tak&eacute; dva dal&scaron;&iacute; sloupce. Chcete-li tyto sloupce povolit, klikn&#283;te prav&yacute;m tla&#269;&iacute;tkem my&scaron;i na stromovou strukturu a v kontextov&eacute;m menu vyberte <b>Nastaven&iacute; stromu</b> a pot&eacute; <b>Zobrazit popis</b> (<span style="font-size:small;"><a href="../Release_notes_0.21.html" title="Release notes 0.21">introduced in 0.21</a></span>) a/nebo <b>Zobrazit intern&iacute; n&aacute;zev</b> (<span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>). Nadpisy sloupc&#367; se p&#345;idaj&iacute;, pokud je zobrazen v&iacute;ce ne&#382; jeden sloupec. Vezm&#283;te na v&#283;dom&iacute;, &#382;e vnit&#345;n&iacute; n&aacute;zvy objekt&#367; nelze m&#283;nit.
 </p>
 <h3><span class="mw-headline" id="Edit_object_label">Edit object label</span></h3>
 <p>Select an object in the first column and press <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">F2</span> (on Windows and Linux), or <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Enter</span> (on macOS), to edit its <span style="font-size:60%; padding-right:0.8em;">&Uacute;daje</span><b>Label</b> property. This property can also be edited via the context menu option <b>Rename</b> or in the <a href="../Property_View.html" title="Property View">Property View</a>.
@@ -158,15 +158,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122184230
+Cached time: 20260122184455
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.125 seconds
-Real time usage: 0.190 seconds
+CPU time usage: 0.123 seconds
+Real time usage: 0.186 seconds
 Preprocessor visited node count: 751/1000000
-Post&#8208;expand include size: 37973/2097152 bytes
-Template argument size: 12180/2097152 bytes
+Post&#8208;expand include size: 37981/2097152 bytes
+Template argument size: 12188/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -174,19 +174,19 @@ Unstrip post&#8208;expand size: 2392/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   54.691      1 -total
- 23.95%   13.101      1 Template:Interface_navi/cs
- 18.90%   10.336      1 Template:Userdocnavi/cs
- 17.14%    9.376      3 Template:Navigation_menu_2
- 16.87%    9.226      1 Template:Std_Base_navi/cs
- 11.16%    6.105      1 Template:FALSE
-  5.76%    3.151      2 Template:PropertyData
-  3.82%    2.090      1 Template:PropertyView
-  3.61%    1.974     19 Template:KEY
-  3.36%    1.838      3 Template:Variable
+100.00%   43.648      1 -total
+ 27.27%   11.905      1 Template:Std_Base_navi/cs
+ 17.62%    7.691      3 Template:Navigation_menu_2
+ 16.75%    7.310      1 Template:Interface_navi/cs
+ 12.56%    5.480      1 Template:Userdocnavi/cs
+ 10.23%    4.467      2 Template:PropertyData
+  6.64%    2.897      3 Template:Variable
+  5.43%    2.371      1 Template:PropertyView
+  4.75%    2.073      2 Template:Caption
+  4.49%    1.960      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122184230 and revision id 1742590. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412304-0!canonical and timestamp 20260122184455 and revision id 1742592. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
